# optimizee

./: .gitignore  README.md  pyproject.toml
optimizee/: .gitignore
optimizee/src/opimizee/: __main__.py
optimizee/src/opimizee/utils/: config.py
src/opimizee/: __main__.py  cli.py
src/opimizee.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/opimizee/data/: __init__.py  loader.py  preprocess.py
src/opimizee/ml/: model.py  train.py
src/opimizee/viz/: dashboard.py
src/optimizee/: __main__.py  cli.py
src/optimizee/app/: main.py
src/optimizee/data/: loader.py  preprocess.py
src/optimizee/ml/: __init__.py  model.py  train.py
src/optimizee/utils/: __init__.py  config.py
src/optimizee/viz/: dashboard.py
