[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opimizee"
version = "0.1.0"
description = "Optimizee: electricity insights and ML forecasting dashboard"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=16.0",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "plotly>=5.20",
  "dash>=2.17",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
opimizee = "opimizee.cli:main"
